[gd_scene load_steps=7 format=2]

[ext_resource path="res://menu/menu_connect.gd" type="Script" id=1]
[ext_resource path="res://menu/Blue_node_full_image_2.jpg" type="Texture" id=2]
[ext_resource path="res://menu/LemonMilk.otf" type="DynamicFontData" id=3]
[ext_resource path="res://menu/10676.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Blue_node_full_image_2" type="Sprite" parent="."]
position = Vector2( 514.168, 299.828 )
scale = Vector2( 3.67597, 3.37275 )
texture = ExtResource( 2 )

[node name="GameName" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -155.0
margin_top = 67.0
margin_right = 155.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Connexion"
align = 1
valign = 1

[node name="HostButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = 35.0
margin_right = 113.0
margin_bottom = 108.0
mouse_default_cursor_shape = 7
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.648438, 0.648438, 0.648438, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "COnnect"

[node name="LeaveButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = 141.0
margin_right = 115.0
margin_bottom = 214.0
mouse_default_cursor_shape = 7
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.648438, 0.648438, 0.648438, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Quitter"

[node name="Bip" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="adresse" type="LineEdit" parent="."]
margin_left = 400.0
margin_top = 193.0
margin_right = 622.0
margin_bottom = 230.0
rect_pivot_offset = Vector2( 90, 16 )

[node name="Label" type="Label" parent="adresse"]
margin_left = 5.0
margin_top = -28.0
margin_right = 57.0
margin_bottom = -14.0
text = "Adresse :"

[node name="port" type="LineEdit" parent="."]
margin_left = 400.0
margin_top = 271.0
margin_right = 622.0
margin_bottom = 308.0
rect_pivot_offset = Vector2( 90, 16 )

[node name="Label2" type="Label" parent="port"]
margin_left = 2.0
margin_top = -25.0
margin_right = 54.0
margin_bottom = -11.0
text = "Port :"

[connection signal="pressed" from="HostButton" to="." method="_on_HostButton_pressed"]
